# cmake-gtest-base

./: .gitignore  LICENSE  Readme.md  build.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: app.cpp
src/my_library/: CMakeLists.txt
src/my_library/include/my_library/: my_library_component.h
src/my_library/src/: my_library_component_impl.cpp
src/my_library/test/: testlib.cpp
